[package]
name = "coyotes"
version = "0.1.0"
edition = "2024"

categories = ["template-engine", "web-programming"]
description = "Build HTML with HTML in rust"
keywords = ["html", "template", "templates", "web", "ui"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/w-lfpup/coyote-rs"